# PhD_Dissertation_Code

./: LICENSE  README.md
GeneralizedADS/: .gitignore  README.md  TODO ideas.txt  control_mode_test.py  extension ideas.txt  sandbox.py  thesis_spindist_plan_plots.py
GeneralizedADS/ADCS/: LICENSE  adcs_sim.py  adcs_test.py  extra_adcs_test.py  pyproject.toml  run_sim.py  thesis_better_estimation_tests_rwmtq.py  thesis_disturbance_tests_rwmtq.py  thesis_est_case_g_plots.py  thesis_estimation_tests.py  thesis_estimation_tests_rwmtq.py  thesis_plan_tests_mtq_prop.py  thesis_plan_tests_rwmtq.py  thesis_plan_tests_rwmtq_prop.py  thesis_seq_plots.py
GeneralizedADS/ADCS/adcs_test_files/: new_tests_marker20240726-163738.txt
GeneralizedADS/ADCS/adcs_test_files/planner_1_20240726-163739/: program_copy.txt
GeneralizedADS/ADCS/adcs_test_files/planner_1_20240726-163901/: info  program_copy.txt
GeneralizedADS/ADCS/adcs_test_files/planner_1_20240726-174943/: program_copy.txt
GeneralizedADS/ADCS/adcs_test_files/planner_1_20240726-180230/: info  program_copy.txt
GeneralizedADS/ADCS/adcs_test_files/planner_1_20240726-185249/: program_copy.txt
GeneralizedADS/ADCS/adcs_test_files/planner_1_20240726-185528/: program_copy.txt
GeneralizedADS/ADCS/src/sat_ADCS_ADCS/: ADCS.py  ADCS_Bx.py  __init__.py  old_adcs.py  trajectory.py
GeneralizedADS/ADCS/src/sat_ADCS_ADCS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GeneralizedADS/ADCS/thesis_test_files/KEEP THIS ONE TO TRY AGAIN thesis_6U_quat_MTQ_strongprop_LQR_20240902-131143/: program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/MPC_debug_20240930-145056/: error.txt
GeneralizedADS/ADCS/thesis_test_files/PRETTY GOOD PLAN thesis_6U_quat_MTQ_strongprop_LQR_20240903-193432/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ1RW_strongprop_20240829-034608/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ1RW_strongprop_20240829-223212/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_strongprop_20240829-174546/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_strongprop_20240831-203055/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_strongprop_20240904-211921/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_varECIgoals_20240913-013834/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_varECIgoals_20240914-004325/: info
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_varECIgoals_20240920-221248/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_varECIgoals_LQR_20240913-015421/: info
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_varECIgoals_LQR_20240914-015026/: info  program_copy.txt
GeneralizedADS/ADCS/thesis_test_files/thesis_6U_quat_MTQ_varECIgoals_LQR_20240916-180151/: info  program_copy.txt
GeneralizedADS/ADCS/trajectory_planner/: CMakeLists.txt
GeneralizedADS/ADCS/trajectory_planner/src/: ArmaCSV.cpp  ArmaCSV.hpp  ArmaNumpy.cpp  ArmaNumpy.hpp
GeneralizedADS/ADCS/trajectory_planner/src/planner/: GeneralUtil.cpp  GeneralUtil.hpp  OldPlanner.cpp  OldPlanner.hpp  PlannerUtil.cpp  PlannerUtil.hpp  PlannerUtilPy.cpp  PlannerUtilPy.hpp  PyPlanner.cpp  PyPlanner.hpp  Satellite.cpp  Satellite.hpp  main.cpp
GeneralizedADS/control/: disturbance_paper_data.py  paper_plots.py  pyproject.toml  quatset_control_paper_data.py
GeneralizedADS/estimation/: base_est_test.py  est_test.py  estimation_paper_data.py  estimation_paper_data_old.py  estimation_tests.py  paper_plots.py  pyproject.toml  ukf_test.py
GeneralizedADS/helpers/: pyproject.toml
GeneralizedADS/helpers/src/sat_ADCS_helpers/: __init__.py  chain_helpers.py  common_sats.py  frames_helpers.py  helper_test.py  helpers.py  plot_helpers.py  quat_helpers.py
GeneralizedADS/helpers/src/sat_ADCS_helpers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GeneralizedADS/orbital_state/: LICENSE  pyproject.toml
GeneralizedADS/satellite_hardware/: pyproject.toml
beavercube-adcs-master_thesis/: ALILQR_GITHUB.m  ALiLQR_BC_PM.m  ALiLQR_complextraj.m  README.md  bc_anim.mat  bc_vis.m  call_simulation.m  complex3.mat  converged.mat  g_coeffs.csv  h_coeffs.csv  test.txt  vis_run_1.mat
beavercube-adcs-master_thesis/matfiles/: B_ECI.mat  B_ECI_WS.mat  B_ECI_equatorial.mat  B_pred_next.mat  B_predict.mat  K.mat  Kgentraj.mat  Rtest_backwardspass.mat  U.mat  Utestcpp.mat  X.mat  Xdesset_backwardspass.mat  Xtraj_test.mat  Xtrajinit_cpp.mat  dgentraj.mat  dsettest.mat  g_coefs.mat  h_coefs.mat  julia_altro_b.mat  julia_altro_qf.mat  julia_altro_r.mat  julia_altro_v.mat  julia_altro_xinit.mat  magfieldECI_T.mat  magfield_ECI.mat  qf_desired.mat  qf_desired_WS.mat  qf_desired_equatorial.mat  qf_desired_next.mat  r_ECI.mat  r_ECI_WS.mat  r_ECI_equatorial.mat  r_predict.mat  repackAlilqrKset.mat  repackAlilqrKset_lqr.mat  repackAlilqrMu.mat  repackAlilqrPset.mat  repackAlilqrTest.mat  repackAlilqrUinit.mat  repackAlilqrUset.mat  (+13 more)
beavercube-adcs-master_thesis/supplemental_scripts/old-reference-scripts/: DEPRECATED_get_equatorial_rvB_refonly.m  DEPRECATED_plotSimOutput_refonly.m  DEPRECATED_plot_equatorial_referenceonly.m  DEPRECATED_simulation_initialize_refonly.m  generate_Xdesset_nadir.m  grammian.m  keplerian_to_R0.m  qcommand_PM.m
beavercube-adcs-master_thesis/supplemental_scripts/trajectory-optimization-scripts/: ALiLQR_BC_PM_forAM_111220.m  call_trajOpt_cpp.m  debug_trajOpt_cpp_rk4dynamics.m  generate_ALILQR_testcases_for_cpp.m  plot_trajOpt_cpp_output.m
(+237 files in other folders)
