[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sat_ADCS_helpers"
version = "0.0.1"
authors = [
  { name="Patrick McKeen", email="pmckeen@mit.edu" },
]
description = "helper functions for satellite ADCS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: Unknown/Private",#OSI Approved :: MIT License",
    "Operating System :: Unknown",#OS Independent",
]

[tool.setuptools]
include-package-data= true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.bsp"]

[project.urls]
"Homepage" = "nope.com"
"Bug Tracker" = "nope.com"
